--- a/sfzl/public/common/css/style.css
+++ b/sfzl/public/common/css/style.css
@@ -247,13 +247,32 @@ svg:not(:root) {
 .slideBox .bd li{ zoom:1; vertical-align:middle; }
 .slideBox .bd img{width:100%;display:block;  }
 
-/* .slideBox .prev,
-.slideBox .next{ position:absolute; left:3%; top:50%; margin-top:-25px; display:block; width:32px; height:40px; background:url(image/slider-arrow.png) -110px 5px no-repeat; filter:alpha(opacity=50);opacity:0.5;   }
-.slideBox .next{ left:auto; right:3%; background-position:8px 5px; }
+.slideBox .w{
+  margin-top: -210px;
+  position: relative;
+}
+.slideBox .prev,
+.slideBox .next{ 
+  position:absolute; 
+  left:3%; 
+  top:-50%; 
+  margin-top:-25px; 
+  display:block; 
+  width:53px; 
+  height:53px; 
+  background:url(../img/icon.png) 0 -60px no-repeat; 
+/*  filter:alpha(opacity=50);
+  opacity:0.5;   */
+}
+.slideBox .next{ 
+  left:auto; 
+  right:3%; 
+  background-position:0 -113px; 
+}
 .slideBox .prev:hover,
 .slideBox .next:hover{ filter:alpha(opacity=100);opacity:1;  }
 .slideBox .prevStop{ display:none;  }
-.slideBox .nextStop{ display:none;  } */
+.slideBox .nextStop{ display:none;  } 
 
 /* picScroll css */
 .picScroll-left{ width:1240px;  position:relative; }
@@ -428,7 +447,7 @@ li:hover svg.borderTran line.right {
 #indexBox .sp_shop{ float:left; margin-right: 25px; }
 #indexBox .sp_big{width: 310px; height: 267px; float: left;}
 #indexBox .sp_biglist li{ 
-  margin-bottom: 10px; 
+  margin-bottom: 6px; 
   width: 310px; 
   height: 271px; 
   float: left;
