--- a/sfzl/public/common/css/style.css
+++ b/sfzl/public/common/css/style.css
@@ -11,6 +11,7 @@ a:focus{outline:none;}
 a:hover{ color: #c92027; }
 img,a img,fieldset{ border:none;}
 em, b, i{font-style: normal;font-weight: normal;}
+input{font-family: "微软雅黑",Arial,sans-serif;}
 svg:not(:root) {
     overflow: hidden;
 }
@@ -205,6 +206,7 @@ svg:not(:root) {
 .menu_list li { float: left; padding: 0 34px;  line-height: 45px; }
 .menu_list li.on{background-color: #c92027;}
 .menu_list li a{color: #fff;font-size: 16px; letter-spacing: 1px;}
+.menu_list li a:hover{color: #ccc;}
 
 #index .menu_main{display: block;}
 .menu_main{display:none; padding-top: 10px; border: 1px solid #ddd;height: 430px;position:absolute;background-color: white;z-index: 999;}
