--- a/sfzl/public/common/css/admin.css
+++ b/sfzl/public/common/css/admin.css
@@ -407,3 +407,243 @@ svg:not(:root) {
 .registForm .row .registBtn:hover{
   background-color: #bb0810;
 }
+
+/*后台公用头部*/
+.head{}
+.head .fl .indexLink{
+  float: left;
+  margin-right: 20px;
+  padding-left: 20px;
+  position: relative;
+}
+.head .fl .indexLink i{
+  background-position: -255px 0;
+  width: 17px;
+  height: 17px;
+  position: absolute;
+  left: 0;
+  top: 8px;
+}
+.head .fl .user{
+  float: left;
+}
+.head .fl .user .welcome{
+  float: left;
+}
+.head .fl .user .vip{
+  float: left;
+  color: #FF6700;
+  margin-left: -2px;
+  font-weight: bold;
+}
+.head .fl .user .vipIcon{
+  float: left;
+  background-position: -238px 0;
+  width: 17px;
+  height: 13px;
+  margin-top: 9px;
+  margin-left: 6px;
+}
+.head .fl .message{
+  float: left;
+  margin-left: 20px;
+  cursor: pointer;
+}
+.head .fl .message span{
+  float: left;
+}
+.head .fl .message .msgIcon.on{
+  background-position: -272px 0;
+  width: 18px;
+  height: 17px;
+  float: left;
+  margin-top: 8px;
+  margin-left: 3px;
+}
+.head .fl .message .msgIcon{
+  background-position: -274px -17px;
+  width: 15px;
+  height: 13px;
+  margin-top: 11px;
+  margin-left: 3px;
+}
+.head .fr .link{
+  margin-left:15px;
+}
+
+.logoBox{
+  background-color: white;
+  width: 100%;
+  height: 85px;
+}
+.logoBox .fl .logo{
+  float: left;
+  margin-top: 13px;
+}
+.logoBox .fl .logo .link{
+  float: left;
+}
+.logoBox .fl .logo .link img{
+  float: left;
+  width: 120px;
+}
+.logoBox .fl h2.title{
+  float: left;
+  width: 180px;
+  height: 58px;
+  border-left: 1px solid #ccc;
+  box-sizing: border-box;
+  padding: 12px 0 0 20px;
+  color: #aaa;
+  font-size: 24px;
+  margin-top: 13px;
+  margin-left: 15px;
+}
+.logoBox .fl .menu{
+  float: left;
+  margin-top: 29px;
+}
+.logoBox .fl .menu li{
+  float: left;
+  font-size: 16px;
+  margin-right: 50px;
+}
+.logoBox .fl .menu li a{
+  float: left;
+}
+.logoBox .fl .menu li a:hover,
+.logoBox .fl .menu li a.on{
+  color: #C92027;
+}
+.logoBox .fr .searchBox{
+  float: left;
+}
+.logoBox .fr .searchBox .searchInput{
+  float: left;
+  width: 410px;
+  height: 40px;
+  box-sizing: border-box;
+  border: 2px solid #ddd;
+  padding-left: 10px;
+  margin-top: 20px;
+}
+.logoBox .fr .searchBox .searchBtn{
+  float: left;
+  background-color: #1B2139;
+  width: 90px;
+  height: 40px;
+  font-size: 18px;
+  color: white;
+  border:none;
+  margin-top: 20px;
+}
+
+.adminBox{
+  background-color: #F4F4F4;
+  width: 100%;
+  height:2000px;
+  padding-top: 10px;
+}
+.adminBox .l,
+.adminBox .m{
+  background-color: white;
+}
+.adminBox .l{
+  width: 230px;
+  margin-right: 13px;
+  box-sizing: border-box;
+  padding-left: 32px;
+  padding-top: 40px;
+}
+.adminBox .m{
+  width: 765px;
+}
+.adminBox .r{
+  width: 220px;
+}
+.adminBox .l h2.title{
+  font-size: 14px;
+  color: #333;
+  float: left;
+}
+.adminBox .l .menu{
+  float: left;
+  padding-bottom: 100px;
+}
+.adminBox .l .menu li{
+  margin-top: 25px;
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+}
+.adminBox .l .menu li a{
+  float: left;
+  position: relative;
+  width: 100%;
+}
+.adminBox .l .menu li a i{
+  position: absolute;
+  top: 7px;
+  right: 15px;
+  width: 9px;
+  height: 7px;
+  background-position: -58px 0;
+}
+.adminBox .l .menu .subMenu{
+  float: left;
+  padding-left: 12px;
+  width: 100%;
+  box-sizing: border-box;
+}
+.adminBox .l .menu .subMenu li{
+  float: left;
+}
+.adminBox .l .menu .subMenu li a{
+  float: left;
+}
+
+/*个人中心*/
+.adminBox .r .rBox{
+  float: left;
+  background-color: white;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 10px;
+  margin-bottom: 10px;
+}
+.adminBox .r .rBox h3{
+  font-size: 16px;
+  border-bottom:1px solid #ddd;
+  padding-left:8px;
+  box-sizing: border-box;
+  width: 200px;
+  padding-bottom:10px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.adminBox .r .rBox h3 .moreBtn{
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 14px;
+}
+.adminBox .r .rBox .list{
+  float: left;
+  margin-left:8px;
+}
+.adminBox .r .rBox li{
+  float: left;
+  width: 100%;
+  margin-bottom: 25px;
+  box-sizing: border-box;
+  padding-right: 10px;
+}
+.adminBox .r .rBox img{
+  float: left;
+}
+.adminBox .r .rBox .text{
+  float: left;
+  width: 100%;
+  text-align: center;
+  font-size: 14px;
+}
