--- a/sfzl/public/common/css/admin.css
+++ b/sfzl/public/common/css/admin.css
@@ -165,21 +165,24 @@ svg:not(:root) {
 
 /*stars*/
 .stars{
-  width: 83px;
-  height: 15px;
-  background: url(../img/icon.png) no-repeat -371px 0;
+  width: 68px;
+  height: 12px;
+  background: url(../img/icon.png) no-repeat -386px -75px;
+}
+.stars.s1{
+  background-position: -386px -87px;
 }
 .stars.s2{
-  background-position: -371px -15px;
+  background-position: -386px -99px;
 }
 .stars.s3{
-  background-position: -371px -30px;
+  background-position: -386px -111px;
 }
 .stars.s4{
-  background-position: -371px -45px;
+  background-position: -386px -123px;
 }
 .stars.s5{
-  background-position: -371px -60px;
+  background-position: -386px -135px;
 }
 
 .loginHead{
@@ -489,7 +492,6 @@ svg:not(:root) {
 }
 .logoBox .fl h2.title{
   float: left;
-  width: 180px;
   height: 58px;
   border-left: 1px solid #ccc;
   box-sizing: border-box;
@@ -499,9 +501,15 @@ svg:not(:root) {
   margin-top: 13px;
   margin-left: 15px;
 }
+.logoBox .fl h3.title{
+  margin-left: 17px;
+  float: left;
+  margin-top: 31px;
+}
 .logoBox .fl .menu{
   float: left;
   margin-top: 29px;
+  margin-left: 70px;
 }
 .logoBox .fl .menu li{
   float: left;
@@ -537,9 +545,45 @@ svg:not(:root) {
   border:none;
   margin-top: 20px;
 }
+.adminNav{
+  background-color: #E9E9E9;
+  height: 48px;
+  margin-bottom: 5px;
+}
+.adminNav .menuBox{
+  height: 48px;
+}
+.adminNav ul{
+  height: 48px;
+}
+.adminNav .question{
+  float: right;
+  padding-left: 18px;
+  position: relative;
+  margin-top: 13px;
+}
+.adminNav .question i{
+  position: absolute;
+  top: 3px;
+  left: 0;
+  background-position: -290px 0;
+  width: 13px;
+  height: 14px;
+}
+.adminNav li{
+  height: 48px;
+  line-height: 48px;
+  float: left;
+  font-size: 16px;
+  margin-right: 60px;
+}
+.adminNav li.on a{
+  color: #C92027;
+}
+.adminNav li a{
 
+}
 .adminBox{
-  background-color: #F4F4F4;
   width: 100%;
   height:2000px;
   padding-top: 10px;
@@ -552,8 +596,9 @@ svg:not(:root) {
   width: 230px;
   margin-right: 13px;
   box-sizing: border-box;
-  padding-left: 32px;
-  padding-top: 40px;
+  padding-left: 25px;
+  padding-top: 0px;
+  border:1px solid #ddd;
 }
 .adminBox .m{
   width: 765px;
@@ -571,7 +616,7 @@ svg:not(:root) {
   padding-bottom: 100px;
 }
 .adminBox .l .menu li{
-  margin-top: 25px;
+  margin-top: 20px;
   float: left;
   width: 100%;
   box-sizing: border-box;
@@ -580,8 +625,98 @@ svg:not(:root) {
   float: left;
   position: relative;
   width: 100%;
+  color: #333;
+  font-weight: bold;
 }
-.adminBox .l .menu li a i{
+.adminBox .l .menu li a.on,
+.adminBox .l .menu .subMenu li a.on{
+  color: #C92027;
+}
+.adminBox .l .menu .li a i{
+  position: absolute;
+  top: 7px;
+  right: 15px;
+  width: 12px;
+  height: 7px;
+  background-position: -355px -51px;
+}
+.adminBox .l .menu .li.on a i{
+  background-position: -355px -44px;
+}
+.adminBox .l .menu .subMenu{
+  float: left;
+  padding-left: 20px;
+  width: 100%;
+  box-sizing: border-box;
+  display: none;
+}
+.adminBox .l .menu .li.on .subMenu{
+  display: inline-block;
+}
+.adminBox .l .menu .subMenu li{
+  float: left;
+  margin-top: 15px;
+}
+.adminBox .l .menu .subMenu li a{
+  float: left;
+  color: #999;
+  font-weight: normal;
+}
+.adminBox .main{
+  width: 996px;
+}
+.adminBox .main nav{
+  float: left;
+  width: 100%;
+  border:1px solid #ddd;
+  padding: 10px 15px;
+  box-sizing: border-box;
+}
+.adminBox .main nav a{
+  float: left;
+  font-size: 14px;
+  margin-right: 5px;
+}
+.adminBox .main .tabBox{
+  width: 100%;
+  float: left;
+  border-bottom: 1px solid #ddd;
+  margin-top: 20px;
+}
+.adminBox .main .tabBox a{
+  float: left;
+  padding: 0 15px 5px 15px;
+}
+.adminBox .main .tabBox a.on{
+  border-bottom: 2px solid #C92027;
+}
+
+/*个人中心*/
+.adminBox.userIndex{
+  background-color: #F4F4F4;
+}
+.adminBox.userIndex .l{
+  border:none;
+  padding-top: 30px;
+}
+.adminBox.userIndex .l .menu{
+  float: left;
+  padding-bottom: 100px;
+}
+.adminBox.userIndex .l .menu li{
+  margin-top: 25px;
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+
+}
+.adminBox.userIndex .l .menu li a{
+  float: left;
+  position: relative;
+  width: 100%;
+  font-weight: normal;
+}
+.adminBox.userIndex .l .menu .li a i{
   position: absolute;
   top: 7px;
   right: 15px;
@@ -589,20 +724,25 @@ svg:not(:root) {
   height: 7px;
   background-position: -58px 0;
 }
-.adminBox .l .menu .subMenu{
+.adminBox.userIndex .l .menu .li.on a i{
+  background-position: -58px -7px;
+}
+.adminBox.userIndex .l .menu .subMenu{
   float: left;
   padding-left: 12px;
   width: 100%;
   box-sizing: border-box;
+  display: none;
 }
-.adminBox .l .menu .subMenu li{
+.adminBox.userIndex .l .menu .li.on .subMenu{
+  display: inline-block;
+}
+.adminBox.userIndex .l .menu .subMenu li{
   float: left;
 }
-.adminBox .l .menu .subMenu li a{
+.adminBox.userIndex .l .menu .subMenu li a{
   float: left;
 }
-
-/*个人中心*/
 .adminBox .r .rBox{
   float: left;
   background-color: white;
@@ -646,4 +786,367 @@ svg:not(:root) {
   width: 100%;
   text-align: center;
   font-size: 14px;
+  margin-top: 5px;
+}
+.adminBox.userIndex .m{
+
+}
+.adminBox.userIndex .m .userInfo{
+  float: left;
+  padding: 40px 35px 20px 35px;
+  box-sizing: border-box;
+  width: 100%;
+}
+.adminBox.userIndex .m .userInfo .fl .face{
+    width: 144px;
+    height: 144px;
+    float: left;
+    border-radius: 50%;
+}
+.adminBox.userIndex .m .userInfo .fl .info{
+  float: left;
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 370px;
+}
+.adminBox.userIndex .m .userInfo .fl .info h3{
+  float: left;
+  margin-bottom: 10px;
+  width: inherit;
+  color: #333;
+  font-size: 24px;
+}
+.adminBox.userIndex .m .userInfo .fl .info .text{
+  float: left;
+  margin-bottom: 10px;
+  width: inherit;
+}
+.adminBox.userIndex .m .userInfo .fl .info .changeBtn{
+  float: left;
+  margin-bottom: 10px;
+  width: inherit;
+}
+.adminBox.userIndex .m .userInfo ul.fr{
+  width: 115px;
+}
+.adminBox.userIndex .m .userInfo ul.fr li{
+  width: 115px;
+  margin-top: 15px;
+  float: left;
+}
+.adminBox.userIndex .m .userInfo ul.fr li a{
+  float: left;
+  width: 115px;
+}
+.adminBox.userIndex .m .orderListTab{
+  float: left;
+  width: 695px;
+  border-bottom: 1px solid #ddd;
+  margin-left: 30px;
+  margin-bottom: 30px;
+}
+.adminBox.userIndex .m .orderListTab li.fst{
+  margin: 0;
+}
+.adminBox.userIndex .m .orderListTab li{
+  float: left;
+  margin-left:73px;
+  width: 80px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  font-size: 16px;
+}
+.adminBox.userIndex .m .orderListTab a{
+
+}
+.adminBox.userIndex .m .orderListTab a .num{
+  color: #C92027;
+}
+.adminBox.userIndex .m .orderListTab a.on{
+  color: #C92027;
+}
+.adminBox.userIndex .m .orderList{
+  float: left;
+  min-height: 500px;
+  padding-bottom: 100px;
+  width: 695px;
+  margin-left: 40px;
+}
+
+
+/*我要开店*/
+.adminBox.openShop{}
+.adminBox.openShop .infoBox{
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 15px;
+  border:1px solid #ddd;
+}
+.adminBox.openShop .infoBox .shopLogo{
+  width: 118px;
+  float: left;
+  height: 118px;
+  overflow: hidden;
+}
+.adminBox.openShop .infoBox .shopLogo img{
+  width: 118px;
+  float: left;
+}
+.adminBox.openShop .infoBox .fl{
+  width: 345px;
+  margin-left: 22px;
+  height: 118px;
+}
+.adminBox.openShop .infoBox .fl .t{
+  float: left;
+  width: 345px;
+  margin-top: 12px;
+}
+.adminBox.openShop .infoBox .fl .t h3{
+  color: #333;
+  float: left;
+}
+.adminBox.openShop .infoBox .fl .t .s1{
+  color: #999;
+  margin-left: 5px;
+  float: left;
+  margin-top: 2px;
+}
+.adminBox.openShop .infoBox .fl .t .stars{
+  float: left;
+  margin-top: 6px;
+  margin-left: 6px;
+}
+.adminBox.openShop .infoBox .fl .m{
+  float: left;
+  width: 345px;
+  margin-top: 12px;
+}
+.adminBox.openShop .infoBox .fl .m a{
+  float: left;
+  margin-right: 25px;
+}
+.adminBox.openShop .infoBox .fl .b{
+  float: left;
+  width: 345px;
+  margin-top: 12px;
+}
+.adminBox.openShop .infoBox .fl .b .sTitle{
+  float: left;
+}
+.adminBox.openShop .infoBox .fl .b .s{
+  float: left;
+  margin-right:8px;
+}
+.adminBox.openShop .infoBox .fl .b .s span{
+  float: left;
+}
+.adminBox.openShop .infoBox .fl .b .s i{
+  float: left;
+  font-size: 12px;
+  background-color: #999;
+  color: white;
+  padding: 1px;
+  margin-left: 2px;
+}
+.adminBox.openShop .infoBox .fr{
+  width: 466px;
+  height: 118px;
+}
+.adminBox.openShop .infoBox .fr .s1{
+  float: left;
+  margin-top: 12px;
+  color: #333;
+  width: 100%;
+}
+.adminBox.openShop .infoBox .fr ul{
+  float: left;
+  width: 100%;
+  margin-top: 15px;
+}
+.adminBox.openShop .infoBox .fr li{
+  float: left;
+  width: 115px;
+}
+.adminBox.openShop .infoBox .fr li .ti{
+  float: left;
+  width: 115px;
+  margin-bottom: 10px;
+}
+.adminBox.openShop .infoBox .fr li .point{
+  float: left;
+  width: 115px;
+}
+.adminBox.openShop .finance{
+  float: left;
+  margin-top: 30px;
+  width: 100%;
+}
+.adminBox.openShop .finance .circle{
+  float: left;
+  width: 148px;
+  height: 148px;
+  border-radius: 50%;
+  font-size: 18px;
+  margin-left: 70px;
+}
+.adminBox.openShop .finance .account{
+  float: left;
+  width: 280px;
+  margin-right: 65px;
+}
+.adminBox.openShop .finance .account .circle{
+  background-color: #E0585E;
+}
+.adminBox.openShop .finance .account .circle .s1{
+  color: white;
+  width: 148px;
+  text-align: center;
+  float: left;
+  margin: 38px 0 13px 0;
+}
+.adminBox.openShop .finance .account .circle .s2{
+  color: white;
+  width: 148px;
+  text-align: center;
+  float: left;
+}
+.adminBox.openShop .finance .linkBox{
+  float:left;
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+  font-size: 16px;
+}
+.adminBox.openShop .finance .account .linkBox a{
+  margin-right: 24px;
+}
+.adminBox.openShop .finance .account .linkBox a.last{
+  margin: 0;
+}
+.adminBox.openShop .finance .credit{
+  float: left;
+  width: 280px;
+  margin-right: 65px;
+}
+.adminBox.openShop .finance .credit .circle{
+  background-color: #E4803C;
+}
+.adminBox.openShop .finance .credit .s1{
+  color: white;
+  width: 148px;
+  text-align: center;
+  float: left;
+  margin: 38px 0 13px 0;
+}
+.adminBox.openShop .finance .credit .btn{
+  color: white;
+  width: 92px;
+  height: 30px;
+  line-height: 30px;
+  margin-left: 28px;
+  background-color: #CA6C2C;
+  text-align: center;
+  float: left;
+}
+.adminBox.openShop .finance .sf{
+  float: left;
+  width: 280px;
+}
+.adminBox.openShop .finance .sf .circle{
+  background-color: #495068;
+}
+.adminBox.openShop .finance .sf .s1{
+  color: white;
+  width: 148px;
+  text-align: center;
+  float: left;
+  margin: 38px 0 13px 0;
+}
+.adminBox.openShop .finance .sf .btn{
+  color: white;
+  width: 92px;
+  height: 30px;
+  line-height: 30px;
+  margin-left: 28px;
+  background-color: #414555;
+  text-align: center;
+  float: left;
+}
+.adminBox.openShop .finance .sf .linkBox a{
+  margin-left: 12px;
+}
+.business{
+  float:left;
+  margin-top: 50px;
+  width: 100%;
+}
+.business h3{
+  font-size: 24px;
+  float: left;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.business .toDoBox{
+  width: 994px;
+  border:1px solid #ddd;
+  box-sizing: border-box;
+  float: left;
+  padding-bottom: 20px;
+}
+.business .toDoBox h4{
+  height: 40px;
+  width: 100%;
+  box-sizing: border-box;
+  line-height: 40px;
+  padding-left: 20px;
+  background-color: #F3F3F3;
+  border-bottom:1px solid #ddd;
+}
+.business .toDoBox .item{
+  float: left;
+  width: 100%;
+  padding: 20px 20px 0 20px;
+  box-sizing: border-box;
+}
+.business .toDoBox .item label{
+  float: left;
+  height: 128px;
+  line-height: 128px;
+  font-size: 16px;
+  margin-right: 25px;
+}
+.business .toDoBox .item ul{
+  float: left;
+}
+.business .toDoBox .item li{
+  float: left;
+  width: 128px;
+  height: 128px;
+  border-radius: 50%;
+  border:1px solid #ddd;
+  margin-right: 13px;
+}
+.business .toDoBox .item li.on{
+  border-color:#C92027;
+}
+.business .toDoBox .item li.on i{
+  color: #C92027;
+}
+.business .toDoBox .item li span{
+  width: 80%;
+  margin-left: 10%;
+  text-align: center;
+  float: left;
+  margin-top: 40px;
+}
+.business .toDoBox .item li i{
+  font-size: 16px;
+  width: 100%;
+  float: left;
+  text-align: center;
+  margin-top: 10px;
+  font-weight: bold;
 }
