--- a/sfzl/public/common/css/admin.css
+++ b/sfzl/public/common/css/admin.css
@@ -11,7 +11,7 @@ a:focus{outline:none;}
 a:hover{ color: #c92027; }
 img,a img,fieldset{ border:none;}
 em, b, i{font-style: normal;font-weight: normal;}
-input,button{font-family: "微软雅黑",Arial,sans-serif;}
+input,button,textarea{font-family: "微软雅黑",Arial,sans-serif;}
 svg:not(:root) {
     overflow: hidden;
 }
@@ -665,14 +665,14 @@ svg:not(:root) {
 .adminBox .main{
   width: 996px;
 }
-.adminBox .main nav{
+.adminBox .main .nav{
   float: left;
   width: 100%;
   border:1px solid #ddd;
   padding: 10px 15px;
   box-sizing: border-box;
 }
-.adminBox .main nav a{
+.adminBox .main .nav a{
   float: left;
   font-size: 14px;
   margin-right: 5px;
@@ -1078,25 +1078,25 @@ svg:not(:root) {
 .adminBox.openShop .finance .sf .linkBox a{
   margin-left: 12px;
 }
-.business{
+.adminBox.openShop .business{
   float:left;
   margin-top: 50px;
   width: 100%;
 }
-.business h3{
+.adminBox.openShop .business h3{
   font-size: 24px;
   float: left;
   width: 100%;
   margin-bottom: 20px;
 }
-.business .toDoBox{
+.adminBox.openShop .business .toDoBox{
   width: 994px;
   border:1px solid #ddd;
   box-sizing: border-box;
   float: left;
   padding-bottom: 20px;
 }
-.business .toDoBox h4{
+.adminBox.openShop .business .toDoBox h4{
   height: 40px;
   width: 100%;
   box-sizing: border-box;
@@ -1105,23 +1105,23 @@ svg:not(:root) {
   background-color: #F3F3F3;
   border-bottom:1px solid #ddd;
 }
-.business .toDoBox .item{
+.adminBox.openShop .business .toDoBox .item{
   float: left;
   width: 100%;
   padding: 20px 20px 0 20px;
   box-sizing: border-box;
 }
-.business .toDoBox .item label{
+.adminBox.openShop .business .toDoBox .item label{
   float: left;
   height: 128px;
   line-height: 128px;
   font-size: 16px;
   margin-right: 25px;
 }
-.business .toDoBox .item ul{
+.adminBox.openShop .business .toDoBox .item ul{
   float: left;
 }
-.business .toDoBox .item li{
+.adminBox.openShop .business .toDoBox .item li{
   float: left;
   width: 128px;
   height: 128px;
@@ -1129,24 +1129,268 @@ svg:not(:root) {
   border:1px solid #ddd;
   margin-right: 13px;
 }
-.business .toDoBox .item li.on{
+.adminBox.openShop .business .toDoBox .item li.on{
   border-color:#C92027;
 }
-.business .toDoBox .item li.on i{
+.adminBox.openShop .business .toDoBox .item li.on i{
   color: #C92027;
 }
-.business .toDoBox .item li span{
+.adminBox.openShop .business .toDoBox .item li span{
   width: 80%;
   margin-left: 10%;
   text-align: center;
   float: left;
   margin-top: 40px;
 }
-.business .toDoBox .item li i{
+.adminBox.openShop .business .toDoBox .item li i{
   font-size: 16px;
   width: 100%;
   float: left;
   text-align: center;
   margin-top: 10px;
   font-weight: bold;
+}
+
+/*店铺设置*/
+.adminBox.setShop .main .setBox{
+  float: left;
+  border:1px solid #ddd;
+  width: 100%;
+  margin-top: 70px;
+}
+@media screen and (-webkit-min-device-pixel-ratio:0){ .adminBox.setShop .main .setBox .setTab{margin-top:-41px!important;} } 
+:root .adminBox.setShop .main .setBox .setTab{
+  margin-top: -40px;
+}
+
+.adminBox.setShop .main .setBox .setTab{
+  float: left;
+  width: 100%;
+  margin-top: -41px;
+  margin-left: -1px;
+}
+
+.adminBox.setShop .main .setTab a{
+  padding: 10px 15px;
+  float: left;
+  margin-right: 10px;
+  background-color: #E9E9E9;
+  border:1px solid #ddd;
+  border-bottom: none;
+}
+.adminBox.setShop .main .setTab a.on{
+  background-color: white;
+  margin-bottom:-1px;
+  padding-bottom: 11px;
+  font-weight: bold;
+  position: relative;
+}
+.setForm{
+  float: left;
+  box-sizing: border-box;
+  padding: 20px 20px 20px 0;
+  width: 100%;
+}
+#setShopForm{
+  float: left;
+}
+#setShopForm h4.ti{
+  float: left;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+#setShopForm .item{
+  float: left;
+  width: 100%;
+  margin-bottom: 20px;
+}
+#setShopForm .item label{
+  float: left;
+  width: 110px;
+  text-align: right;
+  height: 32px;
+  line-height: 32px;
+}
+#setShopForm .item label i{
+  color: #C92027;
+}
+#setShopForm .item .text{
+  float: left;
+  width: 400px;
+  height: 32px;
+  border:1px solid #ddd;
+  box-sizing: border-box;
+  padding: 6px 10px;
+  color: #666;
+}
+#setShopForm .item .error{
+  float: left;
+  color: #C92027;
+  margin-left: 5px;
+}
+#setShopForm .item textarea{
+  float: left;
+  width: 400px;
+  min-height: 60px;
+  border:1px solid #ddd;
+  font-size: 14px;
+  padding: 5px 10px;
+  box-sizing: border-box;
+}
+#setShopForm .item .saveBtn{
+  float: left;
+  width: 110px;
+  height: 40px;
+  background-color: #E0585E;
+  border:none;
+  font-size: 16px;
+  color: white;
+}
+
+#setMobileShopForm{
+  display: none;
+  float: left;
+}
+
+
+/*平台认证*/
+.platformAuth{
+  float: left;
+  width: 100%;
+}
+.platformAuth .authBox{
+  background-color: #80879D;
+  float: left;
+  width: 100%;
+  height: 200px;
+  margin-top: 20px;
+}
+.platformAuth .authBox .fl{
+  width: 200px;
+}
+.platformAuth .authBox .authBg{
+  float: left;
+  position: relative;
+  margin-left: 42px;
+  margin-top: 32px;
+  width: 132px;
+  height: 132px;
+  background-position: 0 -401px;
+}
+.platformAuth .authBox.auth2 .authBg{
+  background-position: -132px -401px;
+}
+.platformAuth .authBox .authBg i{
+  width: 27px;
+  height: 32px;
+  position: absolute;
+  top: 67px;
+  right: 20px;
+}
+.platformAuth .authBox .authBg i.on{
+  background-position: -320px -26px;
+}
+.platformAuth .authBox .fr{
+  width: 790px;
+  margin-top: 40px;
+}
+.platformAuth .authBox .fr .s1{
+  color: white;
+  float: left;
+  width: 100%;
+}
+.platformAuth .authBox .fr .userId{
+  color: white;
+}
+.platformAuth .authBox .fr .s2{
+  color: white;
+  float: left;
+  width: 100%;
+  font-size: 24px;
+}
+.platformAuth .authBox .fr .p1{
+  color: #eee;
+  float: left;
+  width: 100%;
+  margin-bottom: 5px;
+  margin-top: 20px;
+}
+.platformAuth .authBox .fr .p2{
+  color: #eee;
+  float: left;
+  width: 100%;
+}
+.platformAuth .authBox.auth2{
+  background-color: #C9A287;
+}
+.platformAuth .authInfo{
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom: 1px solid #ddd;
+  padding: 25px 15px;
+}
+.platformAuth .authInfo .ti{
+  float: left;
+  font-size: 16px;
+  width: 100%;
+}
+.platformAuth .authInfo .infos{
+  float: left;
+  width: 100%;
+}
+.platformAuth .authInfo .infos li{
+  float: left;
+  margin-top: 20px;
+  width: 250px;
+  margin-right: 10px;
+}
+.platformAuth .authInfo .infos li.long{
+  width: 400px;
+}
+.platformAuth .legalRight{
+  float: left;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px 15px;
+}
+.platformAuth .legalRight .ti{
+  float: left;
+  font-size: 16px;
+  width: 100%;
+}
+.platformAuth .legalRight .s1{
+  float: left;
+  width: 100%;
+  margin-top: 5px;
+}
+.platformAuth .legalRight .rightList{
+  float: left;
+  width: 100%;
+  margin-top: 20px;
+}
+.platformAuth .legalRight .rightList li{
+  float: left;
+  margin-right: 50px;
+  width: 69px;
+}
+.platformAuth .legalRight .rightList li i{
+  float: left;
+}
+.platformAuth .legalRight .rightList li .text{
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  color: #495068;
+  width: 100%;
+}
+.platformAuth .legalRight .rightList li.open i{
+  background-position: -154px -101px;
+  width: 69px;
+  height: 63px;
+}
+.platformAuth .legalRight .rightList li.right i{
+  background-position: -223px -101px;
+  width: 63px;
+  height: 64px;
 }
